--- a/index.html
+++ b/index.html
@@ -1,6 +1,10 @@
 ---
 layout: default
-title: NfaS_Design
+title: NfaS Design
+image360:
+ - https://momento360.com/e/u/e84d0aa43b0f4570ae9a728317836bd6?utm_campaign=embed&utm_source=other&heading=0&pitch=0&field-of-view=75&size=medium
+ - https://momento360.com/e/u/94487e2b6bc94b44aa14e9b0888a603e?utm_campaign=embed&utm_source=other&heading=0&pitch=0&field-of-view=75&size=medium
+
 ---
 
 <div id="carouselExampleIndicators" class="carousel slide" data-ride="carousel">
@@ -13,19 +17,19 @@ title: NfaS_Design
     <div class="carousel-item active" style="background-image: url('https://source.unsplash.com/LAaSoL0LrYs/1920x1080')">
       <div class="carousel-caption d-none d-block">
         <div class="typewriter"><h2 style="font-family: 'Economica';" class="display-4">Welcome to NfaS Design</h2></div>
-        <p class="lead"> We provide Architectural Designes and Solutions </p>
+        <p class="lead"> We provide Architectural Designs and Solutions </p>
       </div>
     </div>
     <div class="carousel-item" style="background-image: url('https://source.unsplash.com/bF2vsubyHcQ/1920x1080')">
       <div class="carousel-caption d-block">
         <div class="typewriter"><h2 style="font-family: 'Economica';"  class="display-4">Welcome to NfaS Design</h2></div>
-        <p class="lead"> We provide Architectural Designes and Solutions </p>
+        <p class="lead"> We provide Architectural Designs and Solutions </p>
       </div>
     </div>
     <div class="carousel-item" style="background-image: url('https://source.unsplash.com/szFUQoyvrxM/1920x1080')">
       <div class="carousel-caption d-block">
         <div class="typewriter"><h2 style="font-family: 'Economica';"  class="display-4">Welcome to NfaS Design</h2></div>
-        <p class="lead"> We provide Architectural Designes and Solutions </p>
+        <p class="lead"> We provide Architectural Designs and Solutions </p>
       </div>
     </div>
   </div>
@@ -57,13 +61,28 @@ title: NfaS_Design
 
 <div class="buffer" id="projects" style="height: 4rem;"></div>
 <div class="container">
-  <h1 style="text-align:center; font-family: 'Economica', sans-serif;"> View All Projects </h1>
+  <h1 style="text-align:center; font-family: 'Economica', sans-serif;"> View Featured Projects </h1>
+  <h4 style="font-family: 'Economica', 'sans-serif';"> Enjoy the experience in 360<sup>o</sup> : </h4>
+  <div class="row">
+    {% for item in page.image360 %}
+    <div class="col-lg-6" style="margin-bottom: 5px;">
+      <div class="embed-responsive embed-responsive-16by9">
+        <iframe class="embed-responsive-item" src="{{item}}"  allowfullscreen="true"></iframe>
+      </div>
+    </div>
+    {% endfor %}
+    
+  </div>
+  
+  <h4 style="font-family: 'Economica', 'sans-serif';"> Stunning : </h4>
   <div class="gallery">
     <div class="row">
       {% for image in site.static_files %}
           {% if image.path contains 'project_images' %}
           <div class="col-md-4 col-sm-6 col-xs-12" style="padding-left: 0%; padding-right: 0%;">
-            <a href="{{ site.baseurl }}{{ image.path }}"><img src="{{ site.baseurl }}{{ image.path }}" alt="" title="Beautiful Image" /></a>
+            {% assign title = image.name%}
+            {% assign title = title | split: "." %}
+            <a href="{{ site.baseurl }}{{ image.path }}"><img src="{{ site.baseurl }}{{ image.path }}" alt="" title="{{ title[1] }}" /></a>
           </div>
           {% endif %}
       {% endfor %}
@@ -89,7 +108,7 @@ title: NfaS_Design
     <div class="col col-md-6">
       <h4 style="font-family: 'Economica';"> Our contact Information </h4>
       <br>
-      <p>Phone no: +8801712256767 <br>Phone(Home): +8801717530120 <br>Gmail: novaharah19@gmail.com <br>Address: 317/18, Nirala R/A, Khulna, Bangladesh</p>
+      <p>Phone no: +8801712256767 <br>Phone(Home): +8801717530120 <br>Gmail: novafarha19@gmail.com <br>Address: 317/18, Nirala R/A, Khulna, Bangladesh</p>
       <br><br>
       <h4 style="font-family: 'Economica';"> Follow Us on Social Media </h4>
         <a href="https://www.facebook.com/novafarhasrabon" target="_blank">  <img src= "{{ "/assets/icon/fb.png" | relative_url}}"  alt="" width="40px" height="40px" style="margin:8px;"> </a>
