--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@ image360:
 <div class="buffer" id="projects" style="height: 4rem;"></div>
 <div class="container">
   <h1 style="text-align:center; font-family: 'Economica', sans-serif;"> View Featured Projects </h1>
-  <h4 style="font-family: 'Economica', 'sans-serif';"> Enjoy the experience in 360<sup>o</sup> : </h4>
+  <h4 style="font-family: 'Economica', 'sans-serif';"> Experience in VR:</h4>
   <div class="row">
     {% for item in page.image360 %}
     <div class="col-lg-6" style="margin-bottom: 5px;">
@@ -74,7 +74,7 @@ image360:
     
   </div>
   
-  <h4 style="font-family: 'Economica', 'sans-serif';"> Stunning : </h4>
+  <h4 style="font-family: 'Economica', 'sans-serif';"> Gallerio : </h4>
   <div class="gallery">
     <div class="row">
       {% for image in site.static_files %}
@@ -103,19 +103,25 @@ image360:
 <div class ="fixed"></div -->
 <div class="buffer"  style="height: 5rem;" id="contact"></div>
 <div class="container" >
-  <h2 style="font-family: 'Economica'; text-align:center;"> Contact Us! </h2><br>
+  
   <div class="row">
-    <div class="col col-md-6">
-      <h4 style="font-family: 'Economica';"> Our contact Information </h4>
+    <div class="col col-md-5">
+      <h2 style="font-family: 'Economica'; text-align:center;"> Contact Details </h2><br>
+      <p> Phone / Whatsapp: +8801712256767 <br> Gmail: novafarha19@gmail.com <br>Address: 317/18, Nirala R/A, Khulna, Bangladesh</p>
+      <a href="tel:+8801712256767">  <img src="{{ "/assets/icon/phone.png" | relative_url}}" alt="" width="40px" height="40px" style="margin:8px;"> </a>
+      <a href="https://wa.me/8801712256767" target="_blank">  <img src="{{ "/assets/icon/wp.png" | relative_url}}" alt="" width="40px" height="40px" style="margin:8px;"> </a>
+      <a href="mailto:novafarha19@gmail.com" target="_blank">  <img src="{{ "/assets/icon/gmail.png" | relative_url}}" alt="" width="40px" height="40px" style="margin:8px;"> </a>
       <br>
-      <p>Phone no: +8801712256767 <br>Phone(Home): +8801717530120 <br>Gmail: novafarha19@gmail.com <br>Address: 317/18, Nirala R/A, Khulna, Bangladesh</p>
-      <br><br>
-      <h4 style="font-family: 'Economica';"> Follow Us on Social Media </h4>
-        <a href="https://www.facebook.com/novafarhasrabon" target="_blank">  <img src= "{{ "/assets/icon/fb.png" | relative_url}}"  alt="" width="40px" height="40px" style="margin:8px;"> </a>
+      <h4 style="font-family: 'Economica';"> Follow Us</h4>
+        <a href="https://www.facebook.com/NfaS2222" target="_blank">  <img src= "{{ "/assets/icon/fb.png" | relative_url}}"  alt="" width="40px" height="40px" style="margin:8px;"> </a>
+        <a href="https://twitter.com/novafa08" target="_blank">  <img src= "{{ "/assets/icon/tw.png" | relative_url}}"  alt="" width="40px" height="40px" style="margin:8px;"> </a>
         <a href="https://www.linkedin.com/in/nova-farha-4577951ab/" target="_blank"> <img src="{{ "/assets/icon/li.png" | relative_url}}" alt="" width="40px" height="40px" style="margin:8px;"> </a>
-        <a href="https://www.instagram.com/nova_fas_08" target="_blank">  <img src="{{ "/assets/icon/tw.png" | relative_url}}" alt="" width="40px" height="40px" style="margin:8px;"> </a>
+        <a href="https://www.instagram.com/nfas_design/" target="_blank">  <img src="{{ "/assets/icon/ins.png" | relative_url}}" alt="" width="40px" height="40px" style="margin:8px;"> </a>
+        <a href="https://www.pinterest.com/NfaS_D08/" target="_blank">  <img src="{{ "/assets/icon/pin.png" | relative_url}}" alt="" width="40px" height="40px" style="margin:8px;"> </a>
+        <a href="https://www.fiverr.com/novafarha08" target="_blank">  <img src="{{ "/assets/icon/fiverr.png" | relative_url}}" alt="" width="40px" height="40px" style="margin:8px;"> </a>
     </div>
-    <div class="col col-md-6">
+    <div class="col col-md-7">
+      <h2 style="font-family: 'Economica'; text-align:center;"> Leave Your Message </h2><br>
       {% include form.html %}
     </div>
   </div>
